Fixed featured image upload and form buttons alignment

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -75,7 +75,7 @@
 .single {
     p {
         font-family: "ff-meta-web-pro",sans-serif;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 1.4em;
     }
     .post {
